--- a/dark/package.json
+++ b/dark/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve"
+    "start": "webpack serve --mode development"
   },
   "author": "Rocket Communications",
   "license": "MIT",
