--- a/dark/package.json
+++ b/dark/package.json
@@ -2,20 +2,24 @@
   "name": "astro-material-dark-theme",
   "version": "1.0.0",
   "description": "Astro Material Dark theme",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --mode development"
+    "start": "webpack serve --mode development",
+    "build": "webpack"
   },
   "author": "Rocket Communications",
-  "license": "MIT",
   "dependencies": {
     "material-components-web": "^10.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
     "css-loader": "^5.2.0",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
+    "postcss-loader": "^5.2.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "webpack": "^5.29.0",
