--- a/dark/package.json
+++ b/dark/package.json
@@ -19,6 +19,7 @@
     "css-loader": "^5.2.0",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
     "postcss-loader": "^5.2.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
