--- a/light/package.json
+++ b/light/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "astro-material-dark-theme",
+  "name": "astro-material-light-theme",
   "version": "1.0.0",
-  "description": "Astro Material Dark theme",
+  "description": "Astro Material Light theme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --mode development",
