--- a/dark/package.json
+++ b/dark/package.json
@@ -4,7 +4,7 @@
   "description": "Astro Material Dark theme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --mode development",
+    "start": "webpack serve --mode development --port 8081",
     "build": "webpack"
   },
   "author": "Rocket Communications",
