--- a/dark/package.json
+++ b/dark/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --mode development --port 8081",
-    "build": "webpack"
+    "build": "webpack --mode production"
   },
   "author": "Rocket Communications",
   "dependencies": {
