--- a/dark/package.json
+++ b/dark/package.json
@@ -2,6 +2,9 @@
   "name": "astro-material-dark-theme",
   "version": "1.0.0",
   "description": "Astro Material Dark theme",
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --mode development --port 8081",
