chore: installed DT package into dark/light for netlify, removed from root

--- a/light/package.json
+++ b/light/package.json
@@ -9,6 +9,7 @@
   },
   "author": "Rocket Communications",
   "dependencies": {
+    "@astrouxds/design-tokens": "^1.3.0",
     "material-components-web": "^10.0.0"
   },
   "devDependencies": {
